UI-3699 [Chrome] Checkbox display is not aligned with the click zone | UI fix CSS

--- a/platform-ui-web-eXoResources/src/main/webapp/skin/less/Form/Style.less
+++ b/platform-ui-web-eXoResources/src/main/webapp/skin/less/Form/Style.less
@@ -123,7 +123,7 @@ textarea {
 	display: inline-block;
 	margin: 0 5px;
 	line-height: 20px;
-	min-width:18px;
+	min-width: 13px;
 }
 
 .uiCheckbox input[type="checkbox"]:checked,
@@ -134,8 +134,8 @@ textarea {
 	outline: 0 none;
 	position: absolute;
 	top: 0;
-	left: 0;
 	z-index: 100;
+	left: 0;
 }
 
 .uiCheckbox > span {
